[package]
name = "arena-rl"
version = "0.1.0"
authors = ["mbuettner"]
edition = "2018"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
specs = "0.20"
specs-derive = "0.4"

[dependencies.sdl2]
features = ["image", "ttf"]
version = "0.35"

[profile.dev]
split-debuginfo = "unpacked"
